--- a/aniversario_atomico.html
+++ b/aniversario_atomico.html
@@ -1,9 +1,6 @@
 <!doctype html>
 <html class="no-js" lang="">
 
-<!doctype html>
-<html class="no-js" lang="">
-
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -145,14 +142,21 @@
             </div>
         </div>
     </header>
-    <main class="a-project blue-element aniversario_atomico fade-in">
+    <main class="a-project green-element aniversario_atomico fade-in">
         <div class="container-fluid content-viewport">
             <div class="row show-large">
                 <!-- left info column -->
                 <div class="col-6 info too-much-text">
                     <div class="copy">
-                        <p>Visual identity for the celebration of <u class="under"> ATOMS MGMT's </u> first anniversary. The identity was
-                            inspired in the recontextualization of the Periodic Table of Elements.
+                        <p>Visual identity for the celebration of <u class="under"> ATOMS MGMT's </u> first and second anniversaries. 
+                            As an <u class="under">artist management and booking agency</u>, the idea of the different parts of the atom and their 
+                            role as building block of all matter inspired both visual identities.
+                        </p>
+                        <p>For 2024, the <u class="under">Periodic Table of Elements</u> was the foundation for a language that took each music project as
+                            an element, with the grid structure being a central piece in structuring the compositions.
+                        </p>
+                        <p>For 2025, a more <u class="under">retro-futuristic apporach</u> took place, with the atoms themselves being depicted with a bold and
+                            deep colour pallette of green, blue and black, alongside a techno-inspired typography.
                         </p>
                     </div>
                     <div class="line"></div>
@@ -162,29 +166,47 @@
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel px-0">
-                            <!-- keep AA slides -->
+                            <!-- normalized slides: media first, then description -->
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/aniv_atomico_25_poster.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Full poster for the 2025 event.</p>
+                                </div>
+                            </div>
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/aniv_atomico_25_sorteio.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>2025 Contest Instagram post.</p>
+                                </div>
+                            </div>
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/aniv_atomico_25_artista.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>2025 Artist Instagram post.</p>
+                                </div>
+                            </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cartaz_a3_aniversario_atomico_FINAL.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Full poster for the event.</p>
+                                    <p>Full poster for the 2024 event.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/bonanca_aniversario_atomico.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Artist lineup post.</p>
+                                    <p>2024 Artist lineup post.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/sogranora_aniversario_atomico.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Artist lineup post.</p>
+                                    <p>2024 Artist lineup post.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/passatempo_atoms_1.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Other social media posts.</p>
+                                    <p>2024 Other social media posts.</p>
                                 </div>
                             </div>
                         </div>
@@ -226,8 +248,15 @@
                 <div class="col-10 col-md-8 d-flex flex-column priority info copy info-slider-small">
                     <button class="close-info-btn-small d-flex justify-content-center align-items-center" id="closeInfoBtnSmall">X</button>
                     <div class="d-flex flex-column">
-                        <p>Visual identity for the celebration of <u class="under"> ATOMS MGMT's </u> first anniversary. The identity was
-                            inspired in the recontextualization of the Periodic Table of Elements.
+                        <p>Visual identity for the celebration of <u class="under"> ATOMS MGMT's </u> first and second anniversaries. 
+                            As an <u class="under">artist management and booking agency</u>, the idea of the different parts of the atom and their 
+                            role as building block of all matter inspired both visual identities.
+                        </p>
+                        <p>For 2024, the <u class="under">Periodic Table of Elements</u> was the foundation for a language that took each music project as
+                            an element, with the grid structure being a central piece in structuring the compositions.
+                        </p>
+                        <p>For 2025, a more <u class="under">retro-futuristic apporach</u> took place, with the atoms themselves being depicted with a bold and
+                            deep colour pallette of green, blue and black, alongside a techno-inspired typography.
                         </p>
                     </div>
                 </div>
@@ -236,29 +265,47 @@
                 <div class="col-12 d-flex justify-content-center align-items-start subject mb-4">
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex justify-content-center row px-0">
-                            <!-- keep AA slides -->
+                            <!-- reuse normalized slides -->
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/aniv_atomico_25_poster.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Full poster for the 2025 event.</p>
+                                </div>
+                            </div>
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/aniv_atomico_25_sorteio.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>2025 Contest Instagram post.</p>
+                                </div>
+                            </div>
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/aniv_atomico_25_artista.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>2025 Artist Instagram post.</p>
+                                </div>
+                            </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cartaz_a3_aniversario_atomico_FINAL.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Full poster for the event.</p>
+                                    <p>Full poster for the 2024 event.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/bonanca_aniversario_atomico.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Artist lineup post.</p>
+                                    <p>2024 Artist lineup post.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/sogranora_aniversario_atomico.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Artist lineup post.</p>
+                                    <p>2024 Artist lineup post.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/passatempo_atoms_1.png" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Other social media posts.</p>
+                                    <p>2024 Other social media posts.</p>
                                 </div>
                             </div>
                         </div>
