--- a/aniversario_punch.html
+++ b/aniversario_punch.html
@@ -142,13 +142,18 @@
             </div>
         </div>
     </header>
-    <main class="a-project green-element aniversario_punch fade-in">
+    <main class="a-project blue-element aniversario_punch fade-in">
         <div class="container-fluid content-viewport">
             <div class="row show-large">
                 <div class="col-6 info too-much-text">
                     <div class="copy">
-                        <p>Visual identity for the celebration of <u class="under"> Punch Magazine's </u> 13th birthday. Design, posters and videos 
-                            developed around the photos taken of a tuna can.
+                        <p>Punch Magazine's 13th birthday was a date to remember. With all those years of <u class="under"> events and musical
+                            journalism</u> under their belt, the event had to have a visual identity that stood out.</p>
+                        <p>As I was already working on the social media posts of the brand, there were some elements 
+                            that should remain in line with the existing language. That said, I ended up creating a
+                            <u class="under"> stop motion animation</u> with dripping sardine cans that became the backbone of what came to be
+                            the identity of the event, paired with a <u class="under">colourful pallette</u>, with a specific colour for each one
+                            of the three days.
                         </p>
                     </div>
                     <div class="line"></div>
@@ -226,8 +231,13 @@
                 <div class="col-10 col-md-8 d-flex flex-column priority info copy info-slider-small">
                     <button class="close-info-btn-small d-flex justify-content-center align-items-center" id="closeInfoBtnSmall">X</button>
                     <div class="d-flex flex-column">
-                        <p>Visual identity for the celebration of <u class="under"> Punch Magazine's </u> 13th birthday. Design, posters and videos 
-                            developed around the photos taken of a tuna can.
+                        <p>Punch Magazine's 13th birthday was a date to remember. With all those years of <u class="under"> events and musical
+                            journalism</u> under their belt, the event had to have a visual identity that stood out.</p>
+                        <p>As I was already working on the social media posts of the brand, there were some elements 
+                            that should remain in line with the existing language. That said, I ended up creating a
+                            <u class="under"> stop motion animation</u> with dripping sardine cans that became the backbone of what came to be
+                            the identity of the event, paired with a <u class="under">colourful pallette</u>, with a specific colour for each one
+                            of the three days.
                         </p>
                     </div>
                 </div>
