--- a/contact_me.html
+++ b/contact_me.html
@@ -148,9 +148,9 @@
     <main class="contact_me fade-in">
         <div class="container-fluid h-100">
             <div class="row show-large h-100">
-                <div class="offset-1 col-5 info d-flex align-items-center">
-                    <div class="">
-                        <p>Let's work <u class="under">together</u>.</p>
+                <div class="offset-1 col-5 info d-flex align-items-center h-100">
+                    <div class="lezzgo">
+                        <p class="mb-0">Let's work <u class="under">together</u>.</p>
                     </div>
                 </div>
                 <!-- <div class="line col-1"></div> -->
@@ -158,7 +158,7 @@
                     <div class="d-flex flex-column">
                         <p><u class="under">E-mail</u>:<br> ricardoriguba@gmail.com</p>
                         <p><u class="under">Phone</u>:<br> +351 969 070 134</p>
-                        <p><u class="under">Instagram</u>:<br> @bonanca.rgb</p>
+                        <p class="mb-0"><u class="under">Instagram</u>:<br> @bonanca.rgb</p>
                     </div>                
                 </div>
             </div>
