--- a/eter_ines_apenas.html
+++ b/eter_ines_apenas.html
@@ -151,8 +151,11 @@
                 <!-- left info column -->
                 <div class="col-6 info too-much-text">
                     <div class="copy">
-                        <p>Cover art, vinyl sleeve and concert poster design for the portuguese alternative pop artist
+                        <p>Cover art, vinyl sleeve and concert poster design for the debut album of portuguese alternative pop artist
                             <u class="under">Inês Apenas</u>.</p>
+                        <p>The main focus being <u class="under">Ana Viotti</u>'s photos, my work consisted mainly on
+                        editing the colours for the cover art and finding an elegant and slick way of fitting all the
+                        lyrics and information on the interior and back of the vinyl sleeve.</p>
                     </div>
                     <div class="line"></div>
                 </div>
@@ -233,8 +236,11 @@
                 <div class="col-10 col-md-8 d-flex flex-column priority info copy info-slider-small">
                     <button class="close-info-btn-small d-flex justify-content-center align-items-center" id="closeInfoBtnSmall">X</button>
                     <div class="d-flex flex-column">
-                        <p>Cover art, vinyl sleeve and concert poster design for the portuguese alternative pop artist
+                        <p>Cover art, vinyl sleeve and concert poster design for the debut album of portuguese alternative pop artist
                             <u class="under">Inês Apenas</u>.</p>
+                        <p>The main focus being <u class="under">Ana Viotti</u>'s photos, my work consisted mainly on
+                        editing the colours for the cover art and finding an elegant and slick way of fitting all the
+                        lyrics and information on the interior and back of the vinyl sleeve.</p>
                     </div>
                 </div>
 
@@ -258,7 +264,7 @@
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/discos_vinil_ines_apenas.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Vinyls series.</p>
+                                    <p>The vinyls themselves.</p>
                                 </div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
