--- a/ineur.html
+++ b/ineur.html
@@ -145,7 +145,7 @@
             </div>
         </div>
     </header>
-    <main class="a-project green-element ineur fade-in">
+    <main class="a-project blue-element ineur fade-in">
         <div class="container-fluid content-viewport">
             <div class="row show-large">
                 <div class="col-6 info too-much-text">
@@ -171,6 +171,24 @@
                 <div class="col-6 d-flex px-5">
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex row px-0">
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/ineur_mockup_poster_metro.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Main poster mockup for the 2026 Amsterdam dates.</p>
+                                </div>  
+                            </div>
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/ineur_mockup_banner_metro.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Metro banner mockup iteration for 2026.</p>
+                                </div>  
+                            </div>
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/Ineur_sticker_this_is_not.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Sticker mockup for the Amsterdam dates.</p>
+                                </div>  
+                            </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/ineur_main.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
@@ -211,7 +229,7 @@
                 </div>    
                 <div class="col-6 other-project justify-content-around d-flex">
                     <div class="p-0">
-                        <a class="no-style" href="sel.html"><</a>
+                        <a class="no-style" href="cidade_sonora.html"><</a>
                     </div>
                     <div class="justify-content-center">more projects</div>
                     <div class="p-0">
@@ -228,7 +246,7 @@
                 <div class="col-12 container-fluid other-project py-1">
                     <div class="row">
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
-                            <a class="no-style ajuste fino" href="sel.html"><</a>
+                            <a class="no-style ajuste fino" href="cidade_sonora.html"><</a>
                         </div>
                         <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
@@ -257,6 +275,24 @@
                 <div class="col-12 d-flex justify-content-center align-items-start subject mb-4">
                     <div class="container-fluid project-carousel-container">
                         <div class="project-carousel d-flex justify-content-center row px-0">
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/ineur_mockup_poster_metro.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Main poster for the 2026 Amsterdam dates.</p>
+                                </div>  
+                            </div>
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/ineur_mockup_banner_metro.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Main poster for the 2026 Amsterdam dates.</p>
+                                </div>  
+                            </div>
+                            <div class="slide d-flex flex-column px-3">
+                                <img src="images/Ineur_sticker_this_is_not.jpg" class="img-fluid">
+                                <div class="pt-3 slide-description">
+                                    <p>Main poster for the 2026 Amsterdam dates.</p>
+                                </div>  
+                            </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/ineur_main.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
