--- a/roterdao.html
+++ b/roterdao.html
@@ -151,8 +151,16 @@
                 <div class="col-6 info too-much-text">
                     <div class="copy">
                         <p>Creation of new identity and graphic system, including a custom
-                             typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
-                            Development as well of a website from scratch.</p>
+                             typography based on the reimagining of the original logo of <u class="under">Roterdão, a night club
+                             and music venue</u> located in the aclaimed Pink Street in Lisbon, Portugal.</p>
+                        <p>Opened in the first half of the 20th century, Roterdão has had different lives, from a sailor's pub when its
+                            surrounding area was mainly focused in providing entertainment for them, to a well known night club in recent
+                            years. The rebranding came as an opportunity to <u class="under">bring its unique identity into the present day</u>, recontextualizing
+                            many of its visual elements, such as colours and vibrant energy, while pairing them with a more modern, focused
+                            and bold aesthetic.</p>
+                        <p>I was also responsible for the <u class="under">development and implementation of a website</u>, which following the brand's reinvigorated attitude,
+                            provided the users with a way of experiencing the club's essence online in a yet functionl manner.
+                        </p>
                         <div>
                             <a class="no-style ajuste" href="https://bonancargb.github.io/roterdao_arquivo/" target="_blank"><u class="under">Check website</u><img class="h-link" src="images/hyperlink.svg"></a>
                         </div>
@@ -228,9 +236,16 @@
                     <button class="close-info-btn-small d-flex justify-content-center align-items-center" id="closeInfoBtnSmall">X</button>
                     <div class="d-flex flex-column">
                         <p>Creation of new identity and graphic system, including a custom
-                             typography based on the reimagining of <u class="under">Roterdão</u>'s original logo.
-                            Development as well of a website from scratch.</p>
-                        <div>
+                            typography based on the reimagining of the original logo of <u class="under">Roterdão, a night club
+                            and music venue</u> located in the aclaimed Pink Street in Lisbon, Portugal.</p>
+                       <p>Opened in the first half of the 20th century, Roterdão has had different lives, from a sailor's pub when its
+                           surrounding area was mainly focused in providing entertainment for them, to a well known night club in recent
+                           years. The rebranding came as an opportunity to <u class="under">bring its unique identity into the present day</u>, recontextualizing
+                           many of its visual elements, such as colours and vibrant energy, while pairing them with a more modern, focused
+                           and bold aesthetic.</p>
+                       <p>I was also responsible for the <u class="under">development and implementation of a website</u>, which following the brand's reinvigorated attitude,
+                           provided the users with a way of experiencing the club's essence online in a yet functionl manner.
+                       </p>
                             <a class="no-style ajuste" href="https://bonancargb.github.io/roterdao_arquivo/" target="_blank"><u class="under">Check website</u><img class="h-link" src="images/hyperlink.svg"></a>
                         </div>
                     </div>
