--- a/seixal_terno.html
+++ b/seixal_terno.html
@@ -145,7 +145,7 @@
             </div>
         </div>
     </header>
-    <main class="a-project blue-element seixal_terno fade-in">
+    <main class="a-project green-element seixal_terno fade-in">
         <div class="container-fluid">
             <div class="row show-large">
                 <div class="col-6 info too-much-text">
@@ -200,7 +200,7 @@
                             <div class="slide d-flex flex-column px-3">
                                 <video src="images/seixal_pc_maos.mp4" muted autoplay loop class="img-fluid"></video>
                                 <div class="pt-3 slide-description">
-                                  <p>Other social media post formats</p>
+                                  <p>Other social media post formats.</p>
                                 </div>
                             </div>
                         </div>
@@ -226,11 +226,11 @@
                 <div class="col-12 container-fluid other-project py-1">
                     <div class="row">
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
-                            <a class="no-style ajuste fino" href="sel.html"><</a>
+                            <a class="no-style ajuste fino" href="ineur.html"><</a>
                         </div>
                         <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
-                            <a class="no-style" href="seixal_terno.html">></a>
+                            <a class="no-style" href="eter_ines_apenas.html">></a>
                         </div>
                     </div>
                 </div>
@@ -243,7 +243,7 @@
                             visual language.
                         </p>
                         <p>Taking inspiration from elements previously featured in other editions of the festival through a new approach, we went
-                            for a <u class="under">warm</u> color palette, combining <u class="under">analog</u> textures with a more <u class="under">modern</u> 
+                            for a <u class="under">warm</u> colour palette, combining <u class="under">analog</u> textures with a more <u class="under">modern</u> 
                             typography, trying to reflect the <u class="under">inclusive</u> nature of the festival, where music aficionados and casual listeners alike can have a great time.
                         </p>
                         <!-- <div>
@@ -275,7 +275,7 @@
                             <div class="slide d-flex flex-column px-3">
                                 <video src="images/seixal_pc_maos.mp4" muted autoplay loop class="img-fluid"></video>
                                 <div class="pt-3 slide-description">
-                                  <p>Other social media post formats</p>
+                                  <p>Other social media post formats.</p>
                                 </div>
                             </div>
                         </div>
