--- a/sel.html
+++ b/sel.html
@@ -209,6 +209,7 @@
                 </div>
                 <div class="col-6 other-project justify-content-around d-flex">
                     <div class="p-0">
+                        <a class="no-style" href="cidade_sonora.html"><</a>
                     </div>
                     <div class="justify-content-center">more projects</div>
                     <div class="p-0">
@@ -220,6 +221,7 @@
                 <div class="col-12 container-fluid other-project py-1">
                     <div class="row">
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0">
+                            <a class="no-style" href="cidade_sonora.html"><</a>
                         </div>
                         <div class="col-6 col-sm-4 d-flex justify-content-center ajuste">more projects</div>
                         <div class="col-3 col-sm-4 justify-content-center d-flex p-0 ajuste fino">
