--- a/index.html
+++ b/index.html
@@ -159,37 +159,37 @@
                     </div> -->
                     <div class="align-items-center index-carousel d-flex row px-0">
                         <div class="slide fade-in">
-                            <a href="seixal_terno.html" class="big-red">
-                                <img class="bg-image" src="images/seixal_poster_mockup_insta.jpg" alt="">
+                            <a href="cidade_sonora.html" class="big-red">
+                                <img class="bg-image" src="images/cidade_poster.jpg" alt="">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
-                                        <p class="titulo mb-0">Seixal Terno</p>
+                                        <p class="titulo mb-0">Cidade Sonora</p>
                                     </div>
                                     <div class="tags">
-                                        <p>brand design | social media design</p>
+                                        <p>web design | brand design | editorial design</p>
                                     </div>
                                 </div>
                               </a>
                         </div>
                         <div class="slide fade-in">
-                            <a href="roterdao.html" class="big-green">
-                                <img class="bg-image" src="images/coaster_roterdao.jpg" alt="">
+                            <a href="ineur.html" class="big-green">
+                                <img class="bg-image" src="images/ineur_mockup_poster_metro.jpg" alt="">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
-                                        <p class="titulo mb-0">Roterdão Club</p>
+                                        <p class="titulo mb-0">Isto Não É Um Recital</p>
                                     </div>
                                     <div class="tags">
-                                        <p>brand design | web design | social media design</p>
+                                        <p>brand design | editorial design | social media design</p>
                                     </div>
                                 </div>                        
                             </a>
                         </div>
                         <div class="slide fade-in">
-                            <a href="sel.html" class="big-blue">
-                                <img class="bg-image" src="images/pc_site_sel.jpg" alt="">
+                            <a href="seixal_terno.html" class="big-blue">
+                                <img class="bg-image" src="images/seixal_poster_mockup_insta.jpg" alt="">
                                 <div class="d-flex flex-column align-items-center">
                                     <div class="titulo-container d-flex align-items-end">
-                                        <p class="titulo mb-0">Sinais em Linha</p>
+                                        <p class="titulo mb-0">Seixal Terno</p>
                                     </div>
                                     <div class="tags">
                                         <p>brand design | social media design</p>
