--- a/roterdao.html
+++ b/roterdao.html
@@ -247,7 +247,6 @@
                            provided the users with a way of experiencing the club's essence online in a yet functionl manner.
                        </p>
                             <a class="no-style ajuste" href="https://bonancargb.github.io/roterdao_arquivo/" target="_blank"><u class="under">Check website</u><img class="h-link" src="images/hyperlink.svg"></a>
-                        </div>
                     </div>
                 </div>
                 <div class="col-12 d-flex justify-content-center align-items-start subject mb-4">
@@ -255,35 +254,37 @@
                         <div class="project-carousel d-flex justify-content-center row px-0">
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_roterdao.svg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>New logo.</p></div>
+                                <div class="pt-1 slide-description"><p>New logo.</p></div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/logo_comparison.svg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>Logo comparison.</p></div>
+                                <div class="pt-1 slide-description"><p>Logo comparison.</p></div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/coaster_roterdao.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>Coaster.</p></div>
+                                <div class="pt-1 slide-description"><p>Coaster.</p></div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/cover_agenda.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>Agenda cover.</p></div>
+                                <div class="pt-1 slide-description"><p>Agenda cover.</p></div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/lighter_roterdao.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>Lighter.</p></div>
+                                <div class="pt-1 slide-description"><p>Lighter.</p></div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/story_roterdao.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>Story post.</p></div>
+                                <div class="pt-1 slide-description"><p>Story post.</p></div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/pin_roterdao.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>Pin.</p></div>
+                                <div class="pt-1 slide-description"><p>Pin.</p></div>
                             </div>
                             <div class="slide px-3 d-flex flex-column">
                                 <img src="images/agenda_roterdao.jpg" class="img-fluid">
-                                <div class="pt-3 slide-description"><p>Agenda.</p></div>
+                                <div class="pt-1 slide-description">
+                                    <p>Agenda.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
