--- a/previous_work.html
+++ b/previous_work.html
@@ -147,7 +147,7 @@
             </div>
         </div>
     </header>
-    <main class="container-fluid pb-5 previous_work fade-in px-0">
+    <main class="container-fluid previous_work fade-in px-0">
         <section class="row">
           <div class="offset-lg-2 col-12 col-lg-8 titulo-1-nivel">
             <img src="img/AGENDA.svg" class="img-fluid" alt="Agenda">
