--- a/previous_work.html
+++ b/previous_work.html
@@ -6,7 +6,8 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">  <title>past_work</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">  
+  <title>past_work</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="slick.css"/>
   <link rel="stylesheet" type="text/css" href="slick-theme.css"/>
@@ -283,7 +284,7 @@
                     </div>
                 </a>
 
-                <a href="cidade.html" class="flex-column brand web editorial py-4 d-flex align-items-center sel">
+                <a href="cidade_sonora.html" class="flex-column brand web editorial py-4 d-flex align-items-center sel">
                     <div class=" d-flex">
                         <p><b>Cidade Sonora</b></p>
                     </div>
