--- a/previous_work.html
+++ b/previous_work.html
@@ -149,13 +149,8 @@
         </div>
     </header>
     <main class="container-fluid previous_work fade-in px-0">
-        <section class="row">
-          <div class="offset-lg-2 col-12 col-lg-8 titulo-1-nivel">
-            <img src="img/AGENDA.svg" class="img-fluid" alt="Agenda">
-          </div>
-        </section>
             <section class="container-dropdown">
-                <div class="dropdown tags-eventos d-flex justify-content-center pt-5 pb-lg-0 pb-4">
+                <div class="dropdown tags-eventos d-flex justify-content-center pt-4 pt-lg-5 pb-lg-0 pb-4">
                     <button
                       id="filterDropdown"                               
                       class="dropdown-toggle d-flex align-items-center justify-content-between mudar"
