last index carousel corrections

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                         <div class="slide fade-in">
                             <a href="cidade_sonora.html" class="big-red">
                                 <img class="bg-image" src="images/cidade_poster.jpg" alt="">
-                                <div class="d-flex flex-column align-items-center">
+                                <div class="d-flex flex-column align-items-center title-tag-container">
                                     <div class="titulo-container d-flex align-items-end">
                                         <p class="titulo mb-0">Cidade Sonora</p>
                                     </div>
@@ -174,7 +174,7 @@
                         <div class="slide fade-in">
                             <a href="ineur.html" class="big-green">
                                 <img class="bg-image" src="images/ineur_mockup_poster_metro.jpg" alt="">
-                                <div class="d-flex flex-column align-items-center">
+                                <div class="d-flex flex-column align-items-center title-tag-container">
                                     <div class="titulo-container d-flex align-items-end">
                                         <p class="titulo mb-0">Isto Não É Um Recital</p>
                                     </div>
@@ -187,7 +187,7 @@
                         <div class="slide fade-in">
                             <a href="seixal_terno.html" class="big-blue">
                                 <img class="bg-image" src="images/seixal_poster_mockup_insta.jpg" alt="">
-                                <div class="d-flex flex-column align-items-center">
+                                <div class="d-flex flex-column align-items-center title-tag-container">
                                     <div class="titulo-container d-flex align-items-end">
                                         <p class="titulo mb-0">Seixal Terno</p>
                                     </div>
