--- a/callendar.html
+++ b/callendar.html
@@ -41,10 +41,10 @@
                 </a>
                 <div class="container-carousel col-4">
                     <div class="carousel-header">
-                        <p>Graphic language and elements for Marta Fonseca's tour <u class="under">Isto não é um Recital</u>.</p>
+                        <p>My first ever callendar. <u class="under">Isto não é um Recital</u>.</p>
                     </div>
                     <div class="carousel-header-still">
-                        <p>Graphic language and elements for Marta Fonseca's tour <u class="under">Isto não é um Recital</u>.</p>
+                        <p>My first ever callendar.<u class="under">Isto não é um Recital</u>.</p>
                     </div>
                 </div>
                 <div class="menu col-4">
