change the subtitles

--- a/cidade_sonora.html
+++ b/cidade_sonora.html
@@ -171,43 +171,43 @@
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cidade_poster.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Main poster mockup for the 2026 Amsterdam dates.</p>
+                                    <p>Main poster.</p>
                                 </div>  
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cidade_brochura.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Metro banner mockup iteration for 2026.</p>
+                                    <p>Pamphlet for the workshop.</p>
                                 </div>  
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cidade_equipamento.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Sticker mockup for the Amsterdam dates.</p>
+                                    <p>Microphone user guide.</p>
                                 </div>  
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cidade_tote.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Main poster for the 2025 tour.</p>
+                                    <p>Tote bag mockup.</p>
                                 </div>  
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cidade_mobile.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Website mobile version.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cidade_desktop.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Website desktop version.</p>
                                 </div>
                             </div>
                             <div class="slide d-flex flex-column px-3">
                                 <img src="images/cidade_resources.jpg" class="img-fluid">
                                 <div class="pt-3 slide-description">
-                                    <p>Specific tour date iteration.</p>
+                                    <p>Brand guides.</p>
                                 </div>
                             </div>
                             
